--- a/Projekt/Teachify/Teachify/Teacher/TeacherStoryboard.storyboard
+++ b/Projekt/Teachify/Teachify/Teacher/TeacherStoryboard.storyboard
@@ -282,6 +282,7 @@
                                         </constraints>
                                         <connections>
                                             <outlet property="roundView" destination="1Y3-Wu-hFY" id="wVr-l2-Erk"/>
+                                            <segue destination="f5g-xN-RKA" kind="show" identifier="Add2AddExercise" id="ZK3-fW-Gg9"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -374,13 +375,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NmL-kG-xTP">
-                                                    <rect key="frame" x="20" y="41" width="18" height="36"/>
+                                                    <rect key="frame" x="20" y="45" width="18" height="36"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Students" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s4t-PZ-TVQ">
-                                                    <rect key="frame" x="38" y="53" width="69" height="21"/>
+                                                    <rect key="frame" x="38" y="57" width="69" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -688,13 +689,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vFr-Xx-7vI">
-                                                    <rect key="frame" x="20" y="41" width="18" height="36"/>
+                                                    <rect key="frame" x="20" y="45" width="18" height="36"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Students" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xKM-qq-uTG">
-                                                    <rect key="frame" x="38" y="53" width="69" height="21"/>
+                                                    <rect key="frame" x="38" y="57" width="69" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -1274,32 +1275,89 @@
             </objects>
             <point key="canvasLocation" x="-713" y="20"/>
         </scene>
-        <!--View Controller-->
+        <!--Add Exercise-->
         <scene sceneID="6In-GE-w1U">
             <objects>
-                <viewController id="f5g-xN-RKA" sceneMemberID="viewController">
+                <viewController title="Add Exercise" id="f5g-xN-RKA" customClass="AddExerciseFirstScreenViewController" customModule="Teachify" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ykk-2h-4Km">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="960"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l6X-uK-nBz">
-                                <rect key="frame" x="326" y="497" width="117" height="30"/>
-                                <state key="normal" title="Etwas hochladen">
-                                    <color key="titleColor" red="0.2156862745" green="0.41176470590000003" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subject" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGG-Zc-g2C">
+                                <rect key="frame" x="48" y="16" width="156" height="58"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="48"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="yHd-kH-qQ5">
+                                <rect key="frame" x="8" y="82" width="752" height="240"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IJv-CT-L13">
+                                    <size key="itemSize" width="229" height="229"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="subjectCell" id="mDd-Si-YpA" customClass="SubjectCollectionViewCell" customModule="Teachify" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="5.5" width="229" height="229"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="229" height="229"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Math" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jRd-uJ-i6I">
+                                                    <rect key="frame" x="20" y="20" width="84" height="46"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="38"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calculator" translatesAutoresizingMaskIntoConstraints="NO" id="0Gw-uH-zbG">
+                                                    <rect key="frame" x="150" y="55" width="90" height="96"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="0Gw-uH-zbG" secondAttribute="height" multiplier="31:33" id="frk-v4-Gg1"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.2156862745" green="0.41176470590000003" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="0Gw-uH-zbG" secondAttribute="trailing" constant="-11" id="C60-QN-VDq"/>
+                                            <constraint firstItem="0Gw-uH-zbG" firstAttribute="top" secondItem="mDd-Si-YpA" secondAttribute="top" constant="55" id="GnT-7w-DCH"/>
+                                            <constraint firstItem="0Gw-uH-zbG" firstAttribute="leading" secondItem="jRd-uJ-i6I" secondAttribute="trailing" constant="46" id="hLn-ZX-zFK"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="jRd-uJ-i6I" secondAttribute="bottom" constant="155" id="kV1-J1-S4f"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="subjectImage" destination="0Gw-uH-zbG" id="K5i-bI-2J8"/>
+                                            <outlet property="subjectName" destination="jRd-uJ-i6I" id="lBW-SU-Dey"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="l6X-uK-nBz" firstAttribute="centerY" secondItem="ykk-2h-4Km" secondAttribute="centerY" id="k9p-hr-tMh"/>
-                            <constraint firstItem="l6X-uK-nBz" firstAttribute="centerX" secondItem="ykk-2h-4Km" secondAttribute="centerX" id="wvo-dL-f5S"/>
+                            <constraint firstItem="dc7-0R-Pm3" firstAttribute="trailing" secondItem="yHd-kH-qQ5" secondAttribute="trailing" constant="8" id="1dN-gW-Ptg"/>
+                            <constraint firstItem="dc7-0R-Pm3" firstAttribute="trailing" secondItem="yHd-kH-qQ5" secondAttribute="trailing" constant="8" id="2xI-NB-g9o"/>
+                            <constraint firstItem="yHd-kH-qQ5" firstAttribute="leading" secondItem="dc7-0R-Pm3" secondAttribute="leading" constant="8" id="Aef-Db-ahh"/>
+                            <constraint firstItem="yHd-kH-qQ5" firstAttribute="top" secondItem="cGG-Zc-g2C" secondAttribute="bottom" constant="8" id="HCz-Qd-IiG"/>
+                            <constraint firstItem="cGG-Zc-g2C" firstAttribute="top" secondItem="dc7-0R-Pm3" secondAttribute="top" constant="16" id="TKk-l9-Qpi"/>
+                            <constraint firstItem="yHd-kH-qQ5" firstAttribute="height" secondItem="ykk-2h-4Km" secondAttribute="height" multiplier="1:4" id="Xla-XJ-23J"/>
+                            <constraint firstItem="yHd-kH-qQ5" firstAttribute="top" secondItem="cGG-Zc-g2C" secondAttribute="bottom" constant="8" id="YGc-my-JjB"/>
+                            <constraint firstItem="cGG-Zc-g2C" firstAttribute="leading" secondItem="dc7-0R-Pm3" secondAttribute="leading" constant="48" id="lrv-bw-CoE"/>
+                            <constraint firstItem="yHd-kH-qQ5" firstAttribute="leading" secondItem="dc7-0R-Pm3" secondAttribute="leading" constant="8" id="tPO-25-UXK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dc7-0R-Pm3"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="1dN-gW-Ptg"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3PD-dW-QtK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-688" y="714"/>
+            <point key="canvasLocation" x="-688.28125" y="713.671875"/>
         </scene>
     </scenes>
     <resources>
