--- a/Projekt/Teachify/Teachify/Base.lproj/Main.storyboard
+++ b/Projekt/Teachify/Teachify/Base.lproj/Main.storyboard
@@ -163,9 +163,16 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1WJ-Ju-RPf">
                                 <rect key="frame" x="8" y="437" width="359" height="30"/>
-                                <state key="normal" title="Delete All Shared Records (Student)"/>
+                                <state key="normal" title="Create Class, Sub, Doc and Ex"/>
                                 <connections>
-                                    <action selector="deleteAllSharedStudentRecords:" destination="j4h-Hl-NbV" eventType="touchUpInside" id="Jg7-rD-Asf"/>
+                                    <action selector="createNewDummyContent:" destination="j4h-Hl-NbV" eventType="touchUpInside" id="Jg7-rD-Asf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r0J-gT-Wz4">
+                                <rect key="frame" x="8" y="475" width="359" height="30"/>
+                                <state key="normal" title="Stop Sharing"/>
+                                <connections>
+                                    <action selector="stopSharing:" destination="j4h-Hl-NbV" eventType="touchUpInside" id="rFT-hw-k8b"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -186,7 +193,10 @@
                             <constraint firstItem="hya-9O-ekD" firstAttribute="leading" secondItem="sGF-G3-70A" secondAttribute="leading" constant="8" id="RzB-aU-3Vt"/>
                             <constraint firstItem="sGF-G3-70A" firstAttribute="trailing" secondItem="rrl-GS-hN7" secondAttribute="trailing" constant="8" id="SH2-6T-Ab1"/>
                             <constraint firstItem="S3o-4S-a08" firstAttribute="top" secondItem="CZu-Vy-Yn6" secondAttribute="bottom" constant="8" id="SKB-3n-0UR"/>
+                            <constraint firstItem="r0J-gT-Wz4" firstAttribute="leading" secondItem="sGF-G3-70A" secondAttribute="leading" constant="8" id="UhE-pO-t5f"/>
                             <constraint firstItem="sGF-G3-70A" firstAttribute="trailing" secondItem="hya-9O-ekD" secondAttribute="trailing" constant="8" id="VKd-kW-Lr7"/>
+                            <constraint firstItem="r0J-gT-Wz4" firstAttribute="top" secondItem="1WJ-Ju-RPf" secondAttribute="bottom" constant="8" id="XTs-Id-wpN"/>
+                            <constraint firstItem="sGF-G3-70A" firstAttribute="trailing" secondItem="r0J-gT-Wz4" secondAttribute="trailing" constant="8" id="eI1-uF-jGS"/>
                             <constraint firstItem="hya-9O-ekD" firstAttribute="top" secondItem="rrl-GS-hN7" secondAttribute="bottom" constant="8" id="lVA-Lr-bO0"/>
                             <constraint firstItem="CZu-Vy-Yn6" firstAttribute="top" secondItem="hya-9O-ekD" secondAttribute="bottom" constant="8" id="pE7-F5-dVQ"/>
                             <constraint firstItem="Cwj-WB-zvu" firstAttribute="leading" secondItem="sGF-G3-70A" secondAttribute="leading" constant="16" id="rgE-fP-qlU"/>
